--- a/dev/css/utils_laptop.css
+++ b/dev/css/utils_laptop.css
@@ -445,7 +445,7 @@
   top: 0;
   bottom: auto;
   margin-top: 0;
-  align-items: start;
+  align-items: flex-start;
   vertical-align: top;
 }
 .mr-laptop-middle {
@@ -461,7 +461,7 @@
   bottom: 0;
   top: auto;
   margin-bottom: 0;
-  align-items: end;
+  align-items: flex-end;
   vertical-align: bottom;
 }
 .mr-laptop-baseline {
